fixed favicon alignment

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ a:active{
 .link{
 	color: black;
 }
-#links {
+.links {
   text-align: center
 }
 
